Change build script to use npx for turbo

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "prepare": "node scripts/prepare.mjs",
     "preinstall": "node scripts/block-npm-install.js",
-    "build": "turbo run build",
+    "build": "npx turbo run build",
     "build:n8n": "node scripts/build-n8n.mjs",
     "build:deploy": "node scripts/build-n8n.mjs",
     "build:docker": "node scripts/build-n8n.mjs && node scripts/dockerize-n8n.mjs",
@@ -84,6 +84,7 @@
     "turbo": "2.5.4",
     "typescript": "*",
     "zx": "^8.1.4"
+    "turbo": "^1.0.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
